--- a/styles.css
+++ b/styles.css
@@ -74,3 +74,7 @@ section #result {
     font-weight: bold;
     color: var(--purple);
 }
+footer{
+    background-color:aliceblue;
+    padding: auto;
+}
