--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ header {
     margin-bottom: 10px;
     z-index: 10;
     text-align: center;
+    padding-bottom: 100px;
 }
 
 header img {
@@ -77,4 +78,5 @@ section #result {
 footer{
     background-color:aliceblue;
     padding: 10 10 10 10;
+    font-style: var(--purple);
 }
